# air-quality-db

./: .gitignore  CMakeLists.txt  README.md
scripts/: aq-upload.sh
sql/: aq-events.sql  aq-metric-view.sql  round-robin-update.sql  round-robin.sql
src/: air-quality-db.c  aqdb-add-device.c
